# Ptyche

./: .gitignore  README.md  demo.py  ptyche.py  pyproject.toml
.github/workflows/: ci.yml
examples/: figure_folding.py
tests/: test_ptyche.py
