[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptyche"
version = "0.1.0"
description = "Trustworthy nonlinear-dynamics invariants (D2, Lyapunov, K2) from non-generic sensor data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Christian Knopp", email = "cknopp@gmail.com" }]
keywords = [
    "nonlinear dynamics", "chaos", "correlation dimension", "lyapunov exponent",
    "kolmogorov-sinai entropy", "takens embedding", "attractor reconstruction",
    "time series", "grassberger-procaccia",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.21", "scipy>=1.7"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/Zynerji/Ptyche"
Repository = "https://github.com/Zynerji/Ptyche"

[tool.setuptools]
py-modules = ["ptyche"]

[tool.pytest.ini_options]
testpaths = ["tests"]
